2006-09-10	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-widget.c(terminal_widget_init): Accept drops from
	  the Thunar path bar. Bug #2284.

2006-09-02	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2006-09-02	Benedikt Meurer <benny@xfce.org>

	* === Released 0.2.5.6rc1 ===
	* NEWS, configure.in.in: Bump version.
	* configure.in.in: Depend on libexo 0.3.1.10rc1.
	* THANKS: Add missing translator credits.
	* po/*.po, po-doc/ja.po: Update Project-Id-Version.

2006-08-26	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-widget.c: Parse file:-URIs dropped to a Terminal
	  window properly and format them so they can be used in shell commands
	  directly without having to worry about quoting. Bug #2076.
	* configure.in.in, terminal/terminal-preferences-dialog.c: Use the
	  thumbnail preview support for the background image file selection
	  that was added with exo 0.3.1.9. Bug #2069.

2006-08-12	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-preferences.c(terminal_preferences_init): Add
	  '~' to the default word chars, as suggested by Giuseppe Torelli
	  <colossus73@gmail.com>.

2006-08-09	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.
	* terminal/terminal-screen.c(terminal_screen_get_working_directory):
	  Make sure that we use linprocfs on all systems.

2006-07-10	Benedikt Meurer <benny@xfce.org>

	* === Released 0.2.5.4beta2 ===
	* NEWS, configure.in.in: Bump version.
	* configure.in.in: Depend on libexo 0.3.1.8beta2.
	* THANKS: Add missing translator credits.
	* po/*.po, po-doc/ja.po: Update Project-Id-Version.

2006-07-09	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-widget.c: Revert the previous patch, as the
	  new regex cannot be compiled on some systems.

2006-07-01	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-widget.c: Apply patch from James Westby
	  <jw+xfce@jameswestby.net> to fix recognition of email addresses
	  with + in the username.
