@@ -65,7 +65,7 @@ AC_PROG_LIBTOOL()
 dnl **********************************
 dnl *** Check for standard headers ***
 dnl **********************************
-AC_CHECK_HEADERS([ctype.h errno.h limits.h pwd.h time.h])
+AC_CHECK_HEADERS([ctype.h errno.h limits.h pwd.h signal.h time.h])
 
 dnl ******************************
 dnl *** Check for i18n support ***
