@@ -1,3 +1,7 @@
+2006-10-01	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in, terminal/main.c(main): Ignore SIGPIPE. Bug #2349.
+
 2006-09-10	Benedikt Meurer <benny@xfce.org>
 
 	* terminal/terminal-widget.c(terminal_widget_init): Accept drops from
